u poco t to primary sources

--- a/html/lesson_plans/contemporary_postcolonial_texts.html
+++ b/html/lesson_plans/contemporary_postcolonial_texts.html
@@ -97,6 +97,7 @@
 
 				<section aria-labelledby="overview">
 					<h3 id="overview">Goals, Questions, and Usage</h3>
+
 					<p>This lesson plan centers the idea that the idea of “race” in the nineteenth century gained its central role in global politics through modes of representation and circulation. The units in this lesson explore the creation of just such a popular representation - that of Africa as a “dark continent” full of dangerous beasts, cannibalistic tribes, and wildernesses infested with deadly parasites. Created at the precise moment when Europe shifted gears from the transatlantic slave trade to the scramble for physical control of the African continent (Brantlinger), this racialized image was created and shared across empire’s center and peripheries.</p>
 
 					<p>Travelogs, adventure narratives, advertisements, and news united discourses on racial difference, whiteness, indigeneity, labor, extraction, nationalism, and cultural hybridity. In these diverse texts threading together the print networks of the empire, “Victorian” values and social perceptions remain a powerful connecting thread. Whether they are being upheld, resisted, or mocked, the effects of an ideological frame pervade this multilingual archive of “dark continent” literature.</p>
@@ -119,7 +120,7 @@
 
 					<p>Resisting that urge, this module encourages students to look for, pay attention to, care about, and recover individual stories and textured experiences of extraction under the aegis of colonialism’s narrative genres. Just as images of Africa cannot be used as a generalization of the continent, similarly, the perspectives of individual Bengali writers - though writing within a milieu - must be given individual attention instead of being granted value as appropriate representatives of a class of fiction. Read in this way, these texts offer critiques of empire that can be aggregated to develop a wider perspective of the nineteenth century and its legacies over time.</p>
 
-					<p><u>A note about images:</u> I have not provided an extensive list of visual materials especially since the archive of visualizing empire is so vast and easily accessible. Most of the primary texts come with illustrations. The issue is not the paucity of illustrations but the recognition of their disturbing nature and the fact that they emerge out of a complex epistemological tradition of remaking an “image-Africa” (Landau) for cultural and political gain.</p>
+					<p><em>A note about images:</em> I have not provided an extensive list of visual materials especially since the archive of visualizing empire is so vast and easily accessible. Most of the primary texts come with illustrations. The issue is not the paucity of illustrations but the recognition of their disturbing nature and the fact that they emerge out of a complex epistemological tradition of remaking an “image-Africa” (Landau) for cultural and political gain.</p>
 				</section>
 
 				<section aria-labelledby="lesson-ideas">
@@ -127,13 +128,16 @@
 
 					<section aria-labelledby="idea-1">
 						<h4 id="idea-1">King<em> Solomon’s Mines</em> and <em>Chander Pahar</em></h4>
+
 						<p>These two texts pair very successfully, since Bibhutibhushan Bandyopadhyay’s novel clearly cites H.R. Haggard’s earlier work. The structure of the journey bears many similarities - a Portuguese man brings news of hidden diamonds, a pact is formed among explorers, they experience many challenges (animal attacks, violent conflicts with Indigenous peoples, entrapment inside caves) and finally rescue the wealth.</p>
 
 						<p>While drawing attention to the exact echoes can lead to a productive discussion of the circulation of imperial genres, another path might be to explore how these apparently similar moments are mobilized to express very different political ends in the two texts. If the texts are used to chart a shifting geography of South-Central Africa, then Melissa Free’s lesson plan on <a aria-label="External Link" href="https://undiscipliningvc.org/html/lesson_plans/africa_southern_africa.html">South Africa 1820-1930</a> could be placed very productively in conversation with them.</p>
 
 						<p>One approach would be to pair specific scenes (the arrival of the sick José/the arrival of the sick Alvarez; the two sequences of being trapped in a cave and finding diamonds). Another point of entry may be to use historical sources/archival documents (see 5.1-2) to contextualize the different moments of empire these texts reference - the creation of a settler state in South Africa vs. the interwar period, decolonization, and changing politics of labor and immigration.</p>
 
+						<section aria-labelledby="discussion-questions">
 							<h5 id="discussion-questions">Discussion Questions</h5>
+
 							<ol>
 								<li>How does the figure of Quatermain have an afterlife in the minds of young English-educated colonial subjects like Shankar? What are the conditions preventing him from/enabling him from becoming like Quatermain?</li>
 								<li>How does the relationship between Shankar and Diego Alvarez represent a mutation of the homosocial logics of the bond between Haggard’s “three white men”? In what way does it restage the relationship between the trio and the figure of Umbopa/Ignosi?</li>
@@ -141,17 +145,21 @@
 								<li>Compare the illustrations of the Bengali text with the images in the original Cassell and Co. illustrated edition. What are the technological differences between the two? What do the mis-en-scène of the respective images and the reproduction processes indicate about the infrastructure of the print networks that produced the two texts?</li>
 								<li>Since both have been adapted for film, what can you say about how these narratives have been remediated as modern fantasies of producing racialized geographies?</li>
 							</ol>
+						</section>
 					</section>
 
 					<section aria-labelledby="idea-2">
 						<h4 id="idea-2">Mitra, “Mosquito” and “Glass” in <em>Mosquito and Other Stories;</em> Lowe, <em>The Intimacies of Four Continents</em></h4>
+
 						<p>The two stories, “Mosquito” and “Glass,” offer an excellent glimpse into the neo-imperial re-imagining of Africa in a post-World War II moment. The figure of Ghanada and his exploits in the Sakhalin islands and Angola offer rich interlocutory possibilities with Lisa Lowe’s work particularly as they highlight the violent creation of the intercontinental “intimacies.” Both Ghanada and the anticipated readers of the stories exemplify, to some extent at least, the “imperial connections” that Lowe draws attention to, in describing the affiliation with Thackeray acknowledged by C. L. R James.</p>
 
 						<p>Not only do the work’s readers and characters sketch the survival of an imperial genealogy, Ghanada embodies the dreams and aspirations of the classic figure of a “new world modernity” (Lowe 80). While the burden of this modern rests on a class of English-educated colonized subjects, it works necessarily by constructing new/newly adapted racial others - in Ghanada’s tales these positions are occupied by the Chinese, Indigenous Africans, and Global South demographic groups.</p>
 
 						<p>Lowe’s chapter can provide a long historical backdrop for the two short stories (can be paired with mapping assignment 5.1 - especially since many of the verbal maps were constructed from descriptions in the <em>National Geographic</em>), and the stories themselves can extend and complicate Lowe’ argument by providing a case study of imagined inter-racial relations by a South Asian writer at the moment of active political decolonization and the formation of the <a aria-label="External Link" href="https://en.wikipedia.org/wiki/Non-Aligned_Movement">Non Aligned Movement.</a> On the other hand, they can be read as parallel histories of rising neo-imperialist sentiment in the postcolonial nation states.</p>
 
+					<section aria-labelledby="discussion-questions-2">
 						<h5 id="discussion-questions-2">Discussion Questions</h5>
+						
 						<ol>
 							<li>Analyze descriptions of Ghanada’s physique. How does this description both reaffirm and challenge racialized constructs of Indian/Bengali/South Asian masculinity?</li>
 							<li>How would you characterize Ghanada’s assessments of white Europeans versus Black Africans? How would you characterize his description of Mr. Nishimara in relation to racial stereotyping?</li>
