u contemp files misc corr

--- a/html/lesson_plans/contemporary_re-reading_archives.html
+++ b/html/lesson_plans/contemporary_re-reading_archives.html
@@ -148,7 +148,7 @@
 							<p>This is a necessary text, but it is also more densely articulated than the texts above, so it will be up to the instructor to decide how to navigate it based on the level of the course that they are teaching. Here, Spillers outlines how enslavement produced conditions (eg. rape, the removal of mother from child, the displacement of the Black father by the white slave master), that complicated the normative gendering – what Spillers coins as an “un-gendering” – of Black men and women, and disrupted how familial bonds in Black families were subsequently forged. Perhaps what is most important to this lesson plan is Spiller’s suggestion that Black women have the potential create a different social subject outside of “the traditional symbolics of female gender [. . . and in the process] rewrite after all a radically different text for female empowerment” (80).</p>
 						</section>
 
-						<p>Instructors should note that the historical documents that Hartman and Hopkinson rely on are themselves included in the books, so students can engage directly with them as they read. A scaled-up version of this lesson plan might supplement Hartman and Hopkinson’s books with some digital archival materials about the era, and draw on some of the starting points listed in Sophia Hsu’s lesson plan, “<a aria-label="External Link" href="https://undiscipliningvc.org/html/lesson_plans/africa_archival_erasure.html">Archival Erasure and the Aftermath of Slavery</a>.”</p>
+						<p>Instructors should note that the historical documents that Hartman and Hopkinson rely on are themselves included in the books, so students can engage directly with them as they read. A scaled-up version of this lesson plan might supplement Hartman and Hopkinson’s books with some digital archival materials about the era, and draw on some of the starting points listed in Sophia Hsu’s lesson plan, “<a aria-label="External Link" href="/html/lesson_plans/africa_archival_erasure.html">Archival Erasure and the Aftermath of Slavery</a>.”</p>
 					</section>
 
 					<section aria-labelledby="materials-3">
@@ -156,7 +156,7 @@
 						<p>
 						<ul>
 							<li>Mitchell, Robin. <em>Vénus Noire: Black Women and Colonial Fantasies in Nineteenth-Century France</em>. University of Georgia Press, 2020.<br/> 
-								<span class="annotation">Mitchell’s text is especially pertinent to understanding Duval’s role in Hopkinson’s <em>The Salt Roads,</em> and Georgia UP has recently released its <a aria-label="External Link" href="https://ugapress.manifoldapp.org/read/a-resource-for-instructors/section/75c746c9-dcb8-439a-a8ae-6ee0d1fea4ca">own resource</a> about teaching Mitchell’s text.</span></li>
+								<span class="annotation">Mitchell’s text is especially pertinent to understanding Duval’s role in Hopkinson’s <em>The Salt Roads</em>, and Georgia UP has recently released its <a aria-label="External Link" href="https://ugapress.manifoldapp.org/read/a-resource-for-instructors/section/75c746c9-dcb8-439a-a8ae-6ee0d1fea4ca">own resource</a> about teaching Mitchell’s text.</span></li>
 						<li>Muñoz, Jos&eacute; Esteban. <em>The Sense of Brown</em>. Duke UP, 2020.</li>
 						</ul></p>
 					</section>
@@ -196,7 +196,7 @@
 							<li>In what ways might we read Hartman and Hopkinson as “queering” established historical narratives about the nineteenth-century, or existing archival documents?</li>
 						</ul>
 
-						<p>Passages that lend themselves well to all the questions above include <em>Wayward</em>’s “An Intimate History of Slavery and Freedom” (46-75) and “The Beauty of the Chorus” (288-343). “Manual for General Housework” (77-80) and “Wayward: A Short Entry On the Possible” (227-228) also provide opportunities for discussing what relationship each of these concepts – the manual and the wayward – have to queerness and eroticism more broadly. In <em>The Salt Roads,</em> these questions lend themselves best to Hopkinson’s depictions of the amorous entanglements between Mer, Tipingee, and Patrice throughout the book, as well as the manifold meanings embedded in the motif of salt in the book.</p>				
+						<p>Passages that lend themselves well to all the questions above include <em>Wayward</em>’s “An Intimate History of Slavery and Freedom” (46-75) and “The Beauty of the Chorus” (288-343). “Manual for General Housework” (77-80) and “Wayward: A Short Entry On the Possible” (227-228) also provide opportunities for discussing what relationship each of these concepts – the manual and the wayward – have to queerness and eroticism more broadly. In <em>The Salt Roads</em>, these questions lend themselves best to Hopkinson’s depictions of the amorous entanglements between Mer, Tipingee, and Patrice throughout the book, as well as the manifold meanings embedded in the motif of salt in the book.</p>				
 					</section>
 
 					<section aria-labelledby="genre">
@@ -276,7 +276,7 @@
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 					
-					<p>Cherrie Kwok, dev. “Re-Reading Nineteenth-Century Archives.” Diana Rose Newby, Jessie Reeder, Oishani Sengupta, and Emma Soberano, collab. peer revs.; Ryan D. Fong, les. plan clust. dev./copyed. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/lesson_plans/contemporary_re-reading_nineteenth_century_archives.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/contemporary_re-reading_nineteenth_century_archives.html</a>.</p>
+					<p>Cherrie Kwok, dev. “Re-Reading Nineteenth-Century Archives.” Diana Rose Newby, Jessie Reeder, Oishani Sengupta, and Emma Soberano, collab. peer revs.; Ryan D. Fong, les. plan clust. dev./copyed. <em>Undisciplining the Victorian Classroom</em>, 2024, <a href="/html/lesson_plans/contemporary_re-reading_nineteenth_century_archives.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/contemporary_re-reading_nineteenth_century_archives.html</a>.</p>
 				</section>
 			</main>
 			
