--- a/html/lesson_plans/contemporary_undisciplining_dracula.html
+++ b/html/lesson_plans/contemporary_undisciplining_dracula.html
@@ -415,7 +415,7 @@
 
 					<p>Del Toro, Guillermo (dir.). <em>Blade II</em>. New Line Cinema, 2002.</p>
 
-					<p>Dery, Mark. “Black to the Future: Interviews with Samuel R. Delany, Greg Tate, and Tricia Rose.” <em>Flame Wars: The Discourse of Cyber Culture.</em> Edited by Mark Dery. Duke University Press, 1994, pp. 179-222.</p>
+					<p>Dery, Mark. “Black to the Future: Interviews with Samuel R. Delany, Greg Tate, and Tricia Rose.” <em>Flame Wars: The Discourse of Cyber Culture</em>. Edited by Mark Dery. Duke University Press, 1994, pp. 179-222.</p>
 
 					<p>Gomez, Jewelle. <em>The Gilda Stories</em> (25th Anniversary Edition). Afterword by Alexis Pauline Gumbs. City Lights Books, 2016.</p>
 
@@ -443,7 +443,7 @@
 
 					<p>Thomas, Ebony Elizabeth. <em>The Dark Fantastic: Race and the Imagination from Harry Potter to the Hunger Games</em>. New York University Press, 2019.</p>
 
-					<p>Valente, Joseph. <em>Dracula’s Crypt: Bram Stoker, Irishness, and the Question of Blood.</em> University of Illinois Press, 2002.</p>
+					<p>Valente, Joseph. <em>Dracula’s Crypt: Bram Stoker, Irishness, and the Question of Blood</em>. University of Illinois Press, 2002.</p>
 
 					<p>Wicke, Jennifer. “Vampiric Typewriting.” <em>ELH</em>, Vol. 59, No. 2, Summer, 1992, pp. 467-493.</p>
 				</section>
@@ -463,7 +463,7 @@
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 
-					<p>Renée Fox , dev. “Undisciplining Dracula: Fledgling and Afrofuturism.” Barbara Barrow, Renee Fox, Cherrie Kwok, Jessie Reeder, Oishani Sengupta, Emma Soberano, collab. peer revs.; Ryan D. Fong, les. plan clust. dev./copyed. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/lesson_plans/contemporary_undisciplining_dracula.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/contemporary_undisciplining_dracula.html</a>.</p><!-- Change -->
+					<p>Renée Fox , dev. “Undisciplining Dracula: Fledgling and Afrofuturism.” Barbara Barrow, Renee Fox, Cherrie Kwok, Jessie Reeder, Oishani Sengupta, Emma Soberano, collab. peer revs.; Ryan D. Fong, les. plan clust. dev./copyed. <em>Undisciplining the Victorian Classroom</em>, 2024, <a href="/html/lesson_plans/contemporary_undisciplining_dracula.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/contemporary_undisciplining_dracula.html</a>.</p><!-- Change -->
 				</section>
 			</main>
 			
