u contemp misc corr

--- a/html/lesson_plans/contemporary_bronte_phillips.html
+++ b/html/lesson_plans/contemporary_bronte_phillips.html
@@ -217,7 +217,7 @@
 						<h4 id="bronte">Emily Brontë and <em>Wuthering Heights</em></h4>
 						
 						<dl>
-							<dt id="bindas">Bindas, Ava. “<a aria-label="External Link" href="/html/syllabi/victorian_human.html">The Victorian and the Human</a>.” Patricia A. Matthew, peer rev.; Ryan D. Fong, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021.</dt>
+							<dt id="bindas">Bindas, Ava. “<a href="/html/syllabi/victorian_human.html">The Victorian and the Human</a>.” Patricia A. Matthew, peer rev.; Ryan D. Fong, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021.</dt>
 
 							<dd aria-describedby="bindas">
 								<p>This syllabus examines legacies of white supremacy in Victorian texts through the framework of Black studies, Black feminism, and postcolonial theory. Weeks 7, 8, and 9 of the syllabus (pp. 6-7) address the body, kin, and the environment in <em>Wuthering Heights</em>. These weeks provide useful discussion questions on these topics for students, as well as links or references to framing critical readings by Christina Sharpe and Kathryn Yusoff.</p>
