--- a/sitemap.html
+++ b/sitemap.html
@@ -99,6 +99,10 @@
 						<li role="none"><a href="/html/syllabi.html"><span id="syllabi">Syllabi</span></a>
 							<ol>
 								<li><a href="/html/syllabi/call_for_syllabi_and_syllabus_clusters.html">Call for Syllabi and Syllabus Clusters (Open)</a></li>
+								
+									<li>Religion, Secularism, Empire
+									<ol>
+										<li><a href="/html/syllabi/empire_religion.html">Empire of Religion</a></li></ol>
 								<li>Beyond “Victorian” Literature
 									<ol>
 										<li><a href="/html/syllabi/multiethnic_literature.html">Multiethnic Literature: Global Neo-Victorians</a></li>
