--- a/sitemap.html
+++ b/sitemap.html
@@ -102,7 +102,9 @@
 								
 									<li>Religion, Secularism, Empire
 									<ol>
-										<li><a href="/html/syllabi/empire_religion.html">Empire of Religion</a></li></ol>
+										<li><a href="/html/syllabi/religion_transimperial.html">Religion and the Transimperial: Literatures of Faith, Conquest, and Resistance</a></li>
+										<li><a href="/html/syllabi/empire_religion.html">Empire of Religion</a></li>
+									</ol>
 								<li>Beyond “Victorian” Literature
 									<ol>
 										<li><a href="/html/syllabi/multiethnic_literature.html">Multiethnic Literature: Global Neo-Victorians</a></li>
