--- a/html/syllabi.html
+++ b/html/syllabi.html
@@ -51,8 +51,8 @@
 				</section>
 
 				<section aria-labelledby="religion_transimperial">
-					<h3 id="empire_religion">Empire of Religion</h3>
-					<div><a href="/html/syllabi/religion_transimperial.html"><img loading="lazy" src="/img/syllabi/tiles/uvc_0087-1324px.jpg" srcset="/img/syllabi/tiles/uvc_0087-1324px.jpg 1324w, /img/syllabi/tiles/uvc_0087-1136px.jpg 1136w, /img/syllabi/tiles/uvc_0087-930px.jpg 930w, /img/syllabi/tiles/uvc_0087-814px.jpg 814w, /img/syllabi/tiles/uvc_0087-662px.jpg 662w, /img/syllabi/tiles/uvc_0087-568px.jpg 568w, /img/syllabi/tiles/uvc_0087-530px.jpg 530w, /img/syllabi/tiles/uvc_0087-465px.jpg 465w, /img/syllabi/tiles/uvc_0087-407px.jpg 407w, /img/syllabi/tiles/uvc_0087-0058-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Painting of dancers in large ballroom."/><span>Religion, Secularism, Empire</span></a></div>
+					<h3 id="empire_religion_transimperial">Religion and the Transimperial</h3>
+					<div><a href="/html/syllabi/religion_transimperial.html"><img loading="lazy" src="/img/syllabi/tiles/uvc_0087-1324px.jpg" srcset="/img/syllabi/tiles/uvc_0087-1324px.jpg 1324w, /img/syllabi/tiles/uvc_0087-1136px.jpg 1136w, /img/syllabi/tiles/uvc_0087-930px.jpg 930w, /img/syllabi/tiles/uvc_0087-814px.jpg 814w, /img/syllabi/tiles/uvc_0087-662px.jpg 662w, /img/syllabi/tiles/uvc_0087-568px.jpg 568w, /img/syllabi/tiles/uvc_0087-530px.jpg 530w, /img/syllabi/tiles/uvc_0087-465px.jpg 465w, /img/syllabi/tiles/uvc_0087-407px.jpg 407w, /img/syllabi/tiles/uvc_0087-0058-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Painting of dancers in a large ballroom."/><span>Religion, Secularism, Empire</span></a></div>
 				</section>
 
 				<section aria-labelledby="empire_religion">
