u sitemap and contrib

--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -75,10 +75,10 @@
 						<li><strong>Jesse Cordes Selbin</strong> (Gettysburg College)</li>
 						<li><strong>Kimberly Cox</strong> (Chadron State College)</li>
 						<li><strong>Jenée Crayne</strong> (Notre Dame de Namur University)</li>
-						<li><strong> Riya Das</strong> (Prairie View A&M University)</li>
+						<li><strong>Riya Das</strong> (Prairie View A&M University)</li>
 						<li><strong>Meg Dobbins</strong> (Eastern Michigan Universit)</li>
 						<li><strong>Anne Feuerstein</strong> (University of Hawai'i-Mānoa)</li>
-						<li><strong>Renée Fox</strong> University of California Santa Cruz)</li>
+						<li><strong>Renée Fox</strong> (University of California Santa Cruz)</li>
 						<li><strong>Melissa Free</strong> (Arizona State University)</li>
 						<li><strong>Elaine Freedgood</strong> (New York University)</li>
 						<li><strong>Menglu Gao</strong> (University of Denver)</li>
@@ -89,6 +89,7 @@
 						<li><strong>Alyssa Quinn Johnson</strong> (Texas Christian University)</li>
 						<li><strong>Heidi Kaufman</strong> (University of Oregon)</li>
 						<li><strong>Cherrie Kwok</strong> (University of Virginia)</li>
+						<li><strong>Sebastian Lecourt</strong> (University of Houston)</li>
 						<li><strong>Ji Eun Lee</strong> (Sungkyunkwan University)</li>
 						<li><strong>Margaret Linley</strong> (Simon Fraser University)</li>
 						<li><strong>Waiyee Loh</strong> (Kanagawa University)</li>
@@ -97,8 +98,9 @@
 						<li><strong>Diana Rose Newby</strong> (Princeton University)</li>
 						<li><strong>Indu Ohri</strong> (University of Virginia)</li>
 						<li><strong>Hyungji Park</strong> (Yonsei University)</li>
-						<li><strong>Jacob Romanow</strong> (Bryn Mawr College)</li>
+						<li><strong>Padma Rangarajan</strong> (University of California, Riverside)</li>
 						<li><strong>Jessie Reeder</strong> (Binghamton University)</li>
+						<li><strong>Jacob Romanow</strong> (Bryn Mawr College)</li>
 						<li><strong>Jason Rudy</strong> (University of Maryland, College Park)</li>
 						<li><strong>Mohammad Sakhnini</strong> (Khalif University of Science and Technology)</li>
 						<li><strong>Anne Schwan</strong> (Edinburgh Napier University)</li>
@@ -106,6 +108,7 @@
 						<li><strong>Breanna Simpson</strong> (York University)</li>
 						<li><strong>Jessica R. Valdez</strong> (University of East Anglia)</li>
 						<li><strong>Alisha Walters</strong> (Penn State Abington)</li>
+						<li><strong>Winter Jade Werner</strong> (Wheaton College)</li>
 						<li><strong>Adah Wisnicki</strong> (Prairie Hill Learning Center)</li>
 						<li><strong>Rae X. Yan</strong> (University of Florida)</li>
 					</ul>
