--- a/sitemap.html
+++ b/sitemap.html
@@ -119,6 +119,7 @@
 								
 									<li>Religion, Secularism, Empire
 									<ol>
+										<li><a href="/html/syllabi/constructing_religion.html">Constructing Religion and Empire in Nineteenth-Century Literature</a></li>
 										<li><a href="/html/syllabi/religion_transimperial.html">Religion and the Transimperial: Literatures of Faith, Conquest, and Resistance</a></li>
 										<li><a href="/html/syllabi/empire_religion.html">Empire of Religion</a></li>
 									</ol>
