--- a/html/lesson_plans/contemporary_undisciplining_introduction.html
+++ b/html/lesson_plans/contemporary_undisciplining_introduction.html
@@ -99,7 +99,7 @@
 
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page Citation (MLA)</h3>
-					<p>Fong, Ryan D.; Barbara Barrow; Renee Fox; Cherrie Kwok; Diana Rose Newby; Matthew Poland; Jessie Reeder; Oishani Sengupta; and Emma Soberano. “Undisciplining In and Through Contemporary Texts.”  <em>Undisciplining the Victorian Classroom</em>, 2024, <a href="html/lesson_plans/contemporary_undisciplining_introduction.html" class="cite-link">https://undiscipliningvc.orghtml/lesson_plans/contemporary_undisciplining_introduction.html</a>.</p>
+					<p>Ryan D. Fong, Barbara Barrow, Renee Fox, Cherrie Kwok, Diana Rose Newby, Matthew Poland, Jessie Reeder, Oishani Sengupta, and Emma Soberano. “Undisciplining In and Through Contemporary Texts.”  <em>Undisciplining the Victorian Classroom</em>, 2024, <a href="html/lesson_plans/contemporary_undisciplining_introduction.html" class="cite-link">https://undiscipliningvc.orghtml/lesson_plans/contemporary_undisciplining_introduction.html</a>.</p>
 				</section>
 			</main>
 			
