--- a/sitemap.html
+++ b/sitemap.html
@@ -66,6 +66,7 @@
 							<ol>
 								<li>Undisciplining in and through Contemporary Texts
 									<ol>
+										<li><a href="html/lesson_plans/contemporary_undisciplining_introduction.html">Introduction: Undisciplining In and Through Contemporary Texts</a></li>
 										<li><a href="html/lesson_plans/contemporary_undisciplining_ecocolonialism.html">Undisciplining Ecocolonialism with Leslie Marmon Silko</a></li>
 										<li><a href="html/lesson_plans/contemporary_undisciplining_dracula.html">Undisciplining <em>Dracula</em>: <em>Fledgling</em> and Afrofuturism</a></li>
 										<li><a href="html/lesson_plans/contemporary_re-reading_archives.html">Re-Reading Nineteenth-Century Archives</a></li>
