u soberano aria labels

--- a/0_dev/0_page-dev/2_python-files/detection_and_empire.html
+++ b/0_dev/0_page-dev/2_python-files/detection_and_empire.html
@@ -134,7 +134,7 @@
 					<h4 id="sources-1">Genre & Early Detection</h4>
 
 					<dl>
-						<dt id="Brantlinger">Brantlinger, Patrick. &ldquo;<a href="https://doi.org/10.2307/3044667">What Is &lsquo;Sensational&rsquo; About the &lsquo;Sensation Nove</a>l&rsquo;?&rdquo; <em>Nineteenth-Century Fiction</em>, vol. 37, no. 1, 1982, pp. 1-28.</dt>
+						<dt id="Brantlinger">Brantlinger, Patrick. &ldquo;<a aria-label="External Link" href="https://doi.org/10.2307/3044667">What Is &lsquo;Sensational&rsquo; About the &lsquo;Sensation Novel</a>&rsquo;?&rdquo; <em>Nineteenth-Century Fiction</em>, vol. 37, no. 1, 1982, pp. 1-28.</dt>
 
 						<dd aria-describedby="Brantlinger">
 							<p>In this seminal essay, Brantlinger explores the subgenre of sensation fiction&mdash;often considered a precursor to detective fiction. The essay, which includes <em>The Moonstone </em>among the texts it considers, outlines the genre&rsquo;s predecessors in gothicism and newgate fiction, and its development into the detective novel. As well as tracing a literary lineage for detection, I find that the way Brantlinger thinks about genre&mdash;as both identifiable and yet inherently slippery&mdash;is helpful for framing discussions about how the texts in this cluster adhere to, use, and challenge conventions.</p>
@@ -221,7 +221,7 @@
 					<h3 id="discussions">Discussion Questions, Key Passages, In-Class Activities</h3>
 
 						<h4 id="activity">Activity: “Webs of Detection” </h4>
-						<p>The title and the activity itself are meant to playfully evoke the &ldquo;Charlie Conspiracy&rdquo; <a href="https://knowyourmeme.com/memes/pepe-silvia">meme</a>, drawn from an episode of <em>It&rsquo;s Always Sunny in Philadelphia</em>.</p>
+						<p>The title and the activity itself are meant to playfully evoke the &ldquo;Charlie Conspiracy&rdquo; <a aria-label="External Link" href="https://knowyourmeme.com/memes/pepe-silvia">meme</a>, drawn from an episode of <em>It&rsquo;s Always Sunny in Philadelphia</em>.</p>
 
 						<p>In small groups (two or three students), select a trope which appears in some form in at least two of the texts (e.g., helpless woman, outsider detective, corrupting object of empire) and consider how each of the texts deploys the trope differently in relation to the question of empire. For example, Sherlock Holmes as an outsider detective <em>enforces </em>imperial logics by protecting white womanhood; Noemi as an outsider detective <em>challenges </em>imperialism by questioning eugenics; Ezra Jenkins demonstrates an <em>ambivalent</em> relationship by evoking sympathy, yet ultimately dying (ambivalent relationships will provoke the most debate).</p>
 
@@ -248,7 +248,7 @@
 									<ul>
 										<li>Ask students to close-read illustrations of this story, as well as passages depicting Miss Stoner and her sister, to understand the construction of white Victorian femininity.
 											<ul>
-												<li>Image: Friedrich, Josef. <em><a href=".%20https:/www.arthur-conan-doyle.com/index.php/The_Adventure_of_the_Speckled_Band#Illustrations">She writhed as one who is in terrible pain</a></em>. 1906. <em>The Arthur Conan Doyle Encyclopedia</em></li>
+												<li>Image: Friedrich, Josef. <em><a aria-label="External Link" href=".%20https:/www.arthur-conan-doyle.com/index.php/The_Adventure_of_the_Speckled_Band#Illustrations">She writhed as one who is in terrible pain</a></em>. 1906. <em>The Arthur Conan Doyle Encyclopedia</em></li>
 											</ul></li>
 										<li>Contrast these depictions of the endangered white woman with the descriptions of her stepfather, and in particular his associations with India and Indian animals</li>
 									</ul></li>
@@ -292,7 +292,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					Simões da Fonseca, Gastão. <a href="https://www.arthur-conan-doyle.com/index.php/File:Ernest-flammarion-1913-premieres-aventures-de-sherlock-holmes-p19-illu.jpg"><em>Premieres Aventures de Sherlock Holmes</em></a>. Drawing, 1913. Arthur Conon Doyle Encylopedia. The work is out of copyright and therefore in the public domain. 
+					Simões da Fonseca, Gastão. <a aria-label="External Link" href="https://www.arthur-conan-doyle.com/index.php/File:Ernest-flammarion-1913-premieres-aventures-de-sherlock-holmes-p19-illu.jpg"><em>Premieres Aventures de Sherlock Holmes</em></a>. Drawing, 1913. Arthur Conon Doyle Encylopedia. The work is out of copyright and therefore in the public domain. 
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
