u content # all files

--- a/html/lesson_plans/contemporary_detection_and_empire.html
+++ b/html/lesson_plans/contemporary_detection_and_empire.html
@@ -17,7 +17,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fork-awesome/1.2.0/css/fork-awesome.min.css" integrity="sha512-aupidr80M36SeyviA/hZ2uEPnvt2dTJfyjm9y6z1MgaV13TgzmDiFdsH3cvSNG27mRIj7gJ2gNeg1HeySJyE3Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0013"/>
-		<link rel="stylesheet" type="text/css" href="/css/content.css?=newVers_0013"/>  	
+		<link rel="stylesheet" type="text/css" href="/css/content.css?=newVers_0014"/>  	
 	</head>
 
 	<!-- HTML code in this file adapted from Adrian S. Wisnicki's One More Voice website (https://onemorevoice.org/); released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). -->
@@ -79,7 +79,7 @@
 								<li><a href="#sources-4">Mexico, Race, & Empire</a></li>
 							</ol></li>
 						<li><a href="#discussion">Discussion Questions, Key Passages, In-Class Activities</a></li>
-						<li><a href="#assessments">Assignments and Assessments</a></li>
+						<li><a href="#assignments">Assignments and Assessments</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
 						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
@@ -302,8 +302,8 @@
 					</section>
 				</section>
 
-				<section aria-labelledby="assessments">
-					<h3 id="assessments">Assignments and Assessments</h3>
+				<section aria-labelledby="assignments">
+					<h3 id="assignments">Assignments and Assessments</h3>
 
 					<p>I try to give my students options for a variety of final assessments. In addition to the option to write a traditional analytical paper, students also have the opportunity to write their own piece of short detective fiction, or to partner with a classmate to create a short podcast. Below, I describe the two non-traditional project options in more detail.</p>
 
